--- a/style.css
+++ b/style.css
@@ -159,13 +159,13 @@ body {
 }
 
 .button {
-  padding: 6px 20px;
+  padding: 2px 5px;
   display: inline-block;
   vertical-align: baseline;
   text-decoration: none;
   text-transform: uppercase;
   border-radius: 4px;
-  background-color: #288be6;
+  background-color: #00417d;
   color: #ffffff;
 }
 
