--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ body {
 
 .intro h3,
 .portfolio h3 {
-  margin: 50 0 5px;
+  margin: 50px 0 5px;
   font-size: 28px;
   line-height: 40px;
   font-weight: 500;
